syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.j4c62.infrastructure.grcp";

service EventEmitter {
  rpc emitEvent (EventRequest) returns (EventResponse);
}

message EventRequest {
  string id = 1;
  string source = 2;
  string type = 3;
  string time = 4;
  string data = 5;
  map<string, string> extensions = 6;
}

message EventResponse {
  string status = 1;
  string message = 2;
}
